--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="templates/table.html">
                     <img class="img-responsive" src="static/images/bike_rack.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Bike Racks</a>
+                    <a href="templates/table.html">Bike Racks</a>
                 </h3>
                 <p>Locations of bike racks in Vancouver. Includes information on number of bikes accommodated.</p>
             </div>
