update look. css didnt survive

--- a/README.html
+++ b/README.html
@@ -119,44 +119,21 @@ $(document).ready(function () {
 </div>
 
 
-<style>
-nav {
-    float: left;
-    max-width:40%;
-    margin: 0;
-    padding: 1em;
-}
-
-article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-}
-
-footer {
-    padding: 1em;
-    clear: left;
-}
-</style>
-<div id="vodday-hackathon-submissions" class="section level3">
-<h3>VODday-Hackathon-Submissions</h3>
-<p><small> edited March 5th, 2017 </small></p>
-<p><nav> <strong>Team Name</strong></p>
-<p><big><a href="https://kraxx.github.io/opendata2017/">OpenSesame</a></big></p>
+<p><image src="static/images/slide2.png" style="width:80%"></image></p>
+<div id="vodday-hackathon-submissions-opensesame" class="section level3">
+<h3>VODday-Hackathon-Submissions: OpenSesame</h3>
+<p><small> edited March 5th, 2017 </small> <strong>Team Name</strong></p>
+</div>
+<div id="opensesame" class="section level2">
+<h2>OpenSesame</h2>
 <p>Justin Chow (<a href="mailto:jchowchow@gmail.com">jchowchow@gmail.com</a>)<br />
 David (Wai Ho) Choy (<a href="mailto:choywaiho1@gmail.com">choywaiho1@gmail.com</a>)<br />
 Jennifer Yee (<a href="mailto:jenyee1022@gmail.com">jenyee1022@gmail.com</a>)</p>
 <p><strong>Vancouver Open Data Day Challenge</strong></p>
 <p>Crowdsourcing data from members of the public to improve Municipal Open Data sets</p>
 <p><strong>Prototype</strong></p>
-<p><a href="https://kraxx.github.io/opendata2017/">OpenSesame landing page and edit demo (Only bike rack is working)</a></p>
-<p><a href="https://kraxx.github.io/opendata2017/opensesame.pdf">OpenSesamePresentation</a><br />
-</nav></p>
-<article>
-<image src="static/images/slide2.png" style="width:80%"></image>
-</article>
-<footer>
+<p><a href="https://kraxx.github.io/opendata2017/">OpenSesame landing page and edit demo (Only bike rack is working)</a><br />
+<a href="https://kraxx.github.io/opendata2017/opensesame.pdf">OpenSesamePresentation</a></p>
 <p><strong>Prototype Problem Statement</strong></p>
 <p>Open Data portals are becoming common across North America in the past few years and our province of BC is also part of this movement. Hundreds of city planning, environmental, funding, political and socioeconomic information have been released by cities such as Vancouver, Surrey, Richmond etc. However, these datasets depend on the limited manpower of public officials to maintain and correct records.</p>
 <p>To increase the accuracy, recency and breadth of collected information, members of the public are a relatively untapped source of manpower. Everyone in this city cares about something; be it understanding homelessness, tackling the opiod overdose crisis or finding a way to live in our current high-occupancy city. To governments, we say</p>
