add social media

--- a/README.html
+++ b/README.html
@@ -122,7 +122,7 @@ $(document).ready(function () {
 <p><image src="static/images/slide2.png" style="width:80%"></image></p>
 <div id="vodday-hackathon-submissions-opensesame" class="section level3">
 <h3>VODday-Hackathon-Submissions: OpenSesame</h3>
-<p><small> edited March 5th, 2017 </small> <strong>Team Name</strong></p>
+<p><small> edited March 5th, 2017 </small></p>
 </div>
 <div id="opensesame" class="section level2">
 <h2>OpenSesame</h2>
@@ -130,17 +130,19 @@ $(document).ready(function () {
 David (Wai Ho) Choy (<a href="mailto:choywaiho1@gmail.com">choywaiho1@gmail.com</a>)<br />
 Jennifer Yee (<a href="mailto:jenyee1022@gmail.com">jenyee1022@gmail.com</a>)</p>
 <p><strong>Vancouver Open Data Day Challenge</strong></p>
-<p>Crowdsourcing data from members of the public to improve Municipal Open Data sets</p>
-<p><strong>Prototype</strong></p>
-<p><a href="https://kraxx.github.io/opendata2017/">OpenSesame landing page and edit demo (Only bike rack is working)</a><br />
+<p>Crowdsourcing data from members of the public to improve Municipal Open Data sets.</p>
+<p><strong>Prototype</strong><br />
+<a href="https://www.opendatabc.ca/pages/2017-vodday-vancouver-open-data-day">Vancouver Open Data Day Hackathon official page</a><br />
+<a href="https://kraxx.github.io/opendata2017/">OpenSesame landing page and edit demo (Only bike rack is working)</a><br />
 <a href="https://kraxx.github.io/opendata2017/opensesame.pdf">OpenSesamePresentation</a></p>
+<p><strong>Tweets</strong> <a href="https://twitter.com/DavidChoy7/status/838080215087603713">VODday</a> <a href="https://twitter.com/OpenDataBC/status/838313325549273089">OpenSesame</a></p>
 <p><strong>Prototype Problem Statement</strong></p>
 <p>Open Data portals are becoming common across North America in the past few years and our province of BC is also part of this movement. Hundreds of city planning, environmental, funding, political and socioeconomic information have been released by cities such as Vancouver, Surrey, Richmond etc. However, these datasets depend on the limited manpower of public officials to maintain and correct records.</p>
 <p>To increase the accuracy, recency and breadth of collected information, members of the public are a relatively untapped source of manpower. Everyone in this city cares about something; be it understanding homelessness, tackling the opiod overdose crisis or finding a way to live in our current high-occupancy city. To governments, we say</p>
 <p>“Let your citizens help gather that information.”.</p>
 <p>In America, there is a ratio of about ~250 public employees to 10,000 Americans <a href="http://www.governing.com/gov-data/public-workforce-salaries/states-most-government-workers-public-employees-by-job-type.html">source</a> . That scale alone shows how much more information members of the public can gather at a faster pace, in more detail and with a robustness that comes with sheer numbers.</p>
 <p><strong>Protoype Summary</strong></p>
-<p>OpenSesame is a platform that allows anyone to download a Municipal open dataset, edit it and push it back online as a publicly-updated copy (PUC). Once a user creates a “data project”, this edited data can be accessed as a link from a government website or directly from our landing page. As the dataset accumulates edits from members of the public, it becomes more refined and serves as an alternative version-controlled source of information.</p>
+<p>OpenSesame is a platform that allows anyone to access a Municipal open dataset, edit it and push it back online as a publicly-updated copy (PUC). Once a user creates a “data project”, this edited data can be accessed as a link from a government website or directly from our landing page. As the dataset accumulates edits from members of the public, it becomes more refined and serves as an alternative version-controlled source of information. For ease of use, edit forms will look like googlesheets or simple web forms (TBD).</p>
 <p>The concept of OpenSesame already exists in the form of Wikipedia and OpenStreetMap and like any other idea, execution and partnership is the most important key to this platform’s success. We want to make OpenSesame very easy to integrate into existing municipal open data portals. At some point, we also encourage municipalities to review our publicly-sourced data, validate it and publish it as their own official copy.</p>
 <p><strong>Open Data Sets</strong></p>
 <p>We look forward to working with open data portals from all cities and municipalities in BC in our pilot stage. There is no limit to the type or content of the dataset that we will work with but simple text tables are generally the easiest to work with.</p>
